Migrate to Vercel Postgres for deployment

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,15 @@
-# Generate a secure password hash using: node -e "console.log(require('crypto').createHash('sha256').update('YOUR_PASSWORD').digest('hex'))"
+# Auth - Generate password hash: node -e "console.log(require('crypto').createHash('sha256').update('YOUR_PASSWORD').digest('hex'))"
 AUTH_PASSWORD_HASH=your_sha256_hash_here
 
-# Generate a random secret: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+# Auth secret - Generate: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
 AUTH_SECRET=your_random_secret_here
+
+# Vercel Postgres - These are automatically set when you link a Vercel Postgres database
+POSTGRES_URL=
+POSTGRES_PRISMA_URL=
+POSTGRES_URL_NO_SSL=
+POSTGRES_URL_NON_POOLING=
+POSTGRES_USER=
+POSTGRES_HOST=
+POSTGRES_PASSWORD=
+POSTGRES_DATABASE=
